--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ade's projects</title>
 </head>
-<body style="background-color: black;">
+<body style="background-color: pink;">
     <h1 style="color: white;">My projects</h1>
     <ul>
         <li><a href="randomcolorgenerator/index.html">Random color generator with Hex code</a></li>
