--- a/randomcolorgenerator/index.html
+++ b/randomcolorgenerator/index.html
@@ -8,8 +8,8 @@
     <title>Random colour generator</title>
 </head>
 <body>
-
-    <div class="name" id="hexcode"></div>
+    <div class="rgb" id="rgb"></div>
+    <div class="hexcode" ><span>hexcode:</span><span id="hexcode"></span></div>
     <div class="button" >Tap anywhere</div>
 
 <script src="script.js"></script>
