--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style="background-color: black;">
     <h1 style="color: white;">My projects</h1>
     <ul>
-        <li><a href="randomcolorgenerator/index.html">Random color generator with Hex code</a></li>
+        <li><a href="randomcolorgenerator/index.html">Random colour generator</a></li>
     </ul>
  
 </body>
